<resources>
    <string name="app_name">Cluedo</string>
    <string name="start_game">Start Game</string>
    <string name="help_button">Help</string>
    <string name="closeApp">Close App</string>
    <string name="logo_descritption">The logo of the game.</string>
    <string name="gamerules">Gamerules</string>
    <string name="command">Commands</string>
    <!-- Für die Erklärung des MainScreens -->
    <string name="game_explanation">At the beginning the player has to press the <b>"Start Game"-Button</b>. Then you have to follow the following steps:\n
        \n\t1) The first player (Host) has to create a Lobby with the <b>"Create Lobby"-Button</b>.
        \n\t2) The Host shares the GameID via the <b>Send Link-Button</b>.
        \n\t3) The other players then have to join via the "Join Lobby" Button
        \n\t4) There they have to enter the GameID.
        \n\t5) As soon as somebody enters the Lobby a Character will be assign for every Player.
        \n\t6) The Host can start the Game, when three to six player are in the lobby.
        \n\t7) Now the game begins to find the murderer.

    </string>
...
        cannot continue the game.
    </string>


    <!-- Für die Lobby -->
    <string name="create_lobby">Create Lobby</string>
    <string name="lobby">Lobby</string>
    <string name="join_via">Join via:</string>
    <string name="start">Start</string>
    <string name="send_link">Send Link</string>
    <string name="waiting">Waiting...</string>
    <string name="game_id">Game ID:</string>
    <string name="enter_id">Enter ID</string>
    <string name="join">Join</string>

    <string name="join_lobby">Join Lobby</string>
    <string name="lobby_title">Do you want to create a Lobby <br />or do you want to join one?</string>
    <string name="back">Back</string>
    <string name="Selection_suspicious">Selection suspicious</string>
    <string name="Selection_weapon">Selection weapon</string>
    <string name="choose_the_character_you_want_to_play_with">Choose the character you want to play with</string>
    <string name="back_to_map">Back to map</string>
    <string name="frame">Frame</string>
    <string name="notepad">Notepad</string>
...
